@@ -1,3 +1,8 @@
+2008-11-12 Frank Naegler  <typo3@naegler.net>
+
+	* added hook connector to the profile model
+	* added interface tx_community_UserProfileProvider
+
 2008-11-11 Ingo Renner  <ingo@typo3.org>
 
 	* added reloading to the flexform
